--- a/client/src/components/Game/Game.module.css
+++ b/client/src/components/Game/Game.module.css
@@ -6,7 +6,8 @@
 
 .letter {
   width: 55px;
-  height: 100%;
+  height: 60px;
+  line-height: 60px;
   padding: 5px;
   margin: 2.5px;
   border: 1px solid #d7d7d7;
