Style correct & almost result tiles

--- a/client/src/components/Board/Board.module.css
+++ b/client/src/components/Board/Board.module.css
@@ -22,3 +22,11 @@
 .incorrect {
   background-color: #303535;
 }
+
+.almost {
+  background-color: #cf8a00;
+}
+
+.correct {
+  background-color: #066d3f;
+}
