--- a/client/src/components/Keyboard/Keyboard.module.css
+++ b/client/src/components/Keyboard/Keyboard.module.css
@@ -10,7 +10,7 @@
   flex-direction: row;
   justify-content: center;
   margin: 1px;
-  height: 5em;
+  height: 3em;
 }
 
 .keyboard_letter {
@@ -20,10 +20,11 @@
   min-width: 25px;
   max-width: 32px;
   height: 90%;
+  line-height: 90%;
   margin: 2px;
   font-size: 1.5em;
   border-radius: 5px;
-  background-color: #39393f;
+  background-color: #555b86;
   color: #ede8e8;
   cursor: pointer;
 }
