--- a/client/src/components/Board/Row.module.css
+++ b/client/src/components/Board/Row.module.css
@@ -8,11 +8,11 @@
 .correct,
 .almost {
   width: 35px;
-  height: 50px;
-  line-height: 50px;
+  height: 35px;
+  line-height: 35px;
   padding: 5px;
   margin: 1px;
-  border: 1px solid #d7d7d7;
+  border: 1px solid #8c8a8a;
   font-size: 2em;
   text-align: center;
   text-transform: uppercase;
