Change Keyboard values to lowercase, style uppercase

--- a/client/src/components/Keyboard/Keyboard.module.css
+++ b/client/src/components/Keyboard/Keyboard.module.css
@@ -23,6 +23,7 @@
   line-height: 90%;
   margin: 2px;
   font-size: 1.5em;
+  text-transform: uppercase;
   border-radius: 5px;
   background-color: #555b86;
   color: #ede8e8;
