Render word and rounds in Modal

--- a/client/src/components/Modal/Modal.module.css
+++ b/client/src/components/Modal/Modal.module.css
@@ -29,8 +29,14 @@
   font-size: 3em;
 }
 
-.word {
+.answer {
   font-size: 2em;
+}
+
+.word {
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 2px; 
 }
 
 .text {
