--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
-  border-bottom: 1px #ede8e8 solid;
+  border-bottom: 1px #8c8a8a solid;
 }
 
 .logo {
