--- a/client/src/components/Keyboard/Keyboard.module.css
+++ b/client/src/components/Keyboard/Keyboard.module.css
@@ -46,14 +46,20 @@
 }
 
 @media (min-width: 480px) {
-  .keyboard_letter {
+  .keyboard_letter,
+  .correct,
+  .almost,
+  .incorrect {
     max-width: 44px;
     font-size: 2em;
   }
 }
 
 @media (min-width: 600px) {
-  .keyboard_letter {
+  .keyboard_letter,
+  .correct,
+  .almost,
+  .incorrect {
     max-width: 50px;
     font-size: 2em;
   }
